<!-- Name: Rajkumar Patel -->
<!-- Student ID: N01289472 -->
<!-- Section: RNA -->

<resources>
    <string name="app_name">RajkumarLab3</string>
    <string name="menu_item0">Home</string>
    <string name="menu_item1">Rajkumar</string>
    <string name="menu_item2">Patel</string>
    <string name="menu_item3">Settings</string>
    <string name="dialog_message">Would you like to exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_exit">Exit App</string>
    <string name="overflow_item">Help</string>
    <string name="navigation_drawertitle">Navigation Drawer</string>
    <string name="ra_home_ethint">Enter a date</string>
    <string name="fullname_tv">Rajkumar Patel</string>
    <string name="studentid_tv">N01289472</string>
    <string name="course_selected">The course you have selected:\n</string>
    <string name="date_selected">\n\nThe date you have selected:\n</string>
    <string name="dialog_messageok">Ok</string>
    <string name="firstname_tv">Rajkumar</string>
    <string name="lastname_tv">Patel</string>
    <string name="downloadbtn">Download Image</string>
    <string name="zip_codeet">Enter ZIP code</string>
    <string name="error_message">Enter a valid ZIP code</string>
    <string name="error_message2">ZIP code must be less than 5 characters</string>
    <string name="web_servicesbtn">Web Services</string>
    <string name="change_brightnesstv">Change Brightness</string>
    <string name="change_backgroundtv">Change Background</string>
    <string name="colour1">Green</string>
    <string name="colour2">Blue</string>
    <string name="colour3">Yellow</string>
    <string name="humber_link">https://humber.ca/</string>
    <string name="course_testcase">CENG 319</string>
    <string name="zipcode_testcase">12345</string>
    <string name="colour_testcase">Green</string>

    <string-array name="course_list">
        <item>CENG 317</item>
        <item>CENG 318</item>
        <item>CENG 319</item>
        <item>CENG 320</item>
        <item>NEST 203</item>
        <item>GNED 101</item>
    </string-array>

</resources>