<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/rajNavHome"
            android:icon="@drawable/home_logo"
            android:title="@string/menu_item0" />
        <item
            android:id="@+id/rajNavFirstname"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_item1" />
        <item
            android:id="@+id/rajNavLastname"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_item2" />
        <item
            android:id="@+id/rajNavSettings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_item3" />
    </group>
</menu>