<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rajMobileNavigation"
    app:startDestination="@+id/rajNavHome">

    <fragment
        android:id="@+id/rajNavHome"
        android:name="rajkumar.patel.n01289472.ui.home.RaHome"
        android:label="@string/menu_item0"
        tools:layout="@layout/ra_home" />

    <fragment
        android:id="@+id/rajNavFirstname"
        android:name="rajkumar.patel.n01289472.ui.firstname.RajDown"
        android:label="@string/menu_item1"
        tools:layout="@layout/raj_down" />

    <fragment
        android:id="@+id/rajNavLastname"
        android:name="rajkumar.patel.n01289472.ui.lastname.PaSrv"
        android:label="@string/menu_item2"
        tools:layout="@layout/pa_srv" />

    <fragment
        android:id="@+id/rajNavSettings"
        android:name="rajkumar.patel.n01289472.ui.settings.PatSet"
        android:label="@string/menu_item3"
        tools:layout="@layout/pat_set" />
</navigation>