<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightRed"
    android:orientation="vertical"
    tools:context=".ui.lastname.PaSrv">

    <TextView
        android:id="@+id/rajNameTv3"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dip"
        android:text="@string/lastname_tv" />

    <EditText
        android:id="@+id/rajZipEt"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dip"
        android:ems="14"
        android:hint="@string/zip_codeet"
        android:inputType="phone" />

    <Button
        android:id="@+id/rajWebBtn"
        style="@style/ButtonStyle"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dip"
        android:text="@string/web_servicesbtn" />

</LinearLayout>